--- a/mask/css/style.css
+++ b/mask/css/style.css
@@ -192,3 +192,8 @@ select{
 .leaflet-popup-content {
     min-width: 290px;
 }
+@media only screen and (max-width: 1023px){
+    .fix_box{
+        max-width: 100%;
+    }
+}
