--- a/mask/css/style.css
+++ b/mask/css/style.css
@@ -209,6 +209,8 @@ select{
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 0;
         border-top-right-radius: 0;
+        background: rgba(115, 192, 216, 0.7);
+        box-shadow: -1px 3px 3px rgba(0,0,0,0.3);
     }
     .title{
         width: 35%;
